[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "disp"
authors = [{name = "Bonan Zhu", email = "bonan.zhu@ucl.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"

dependencies = [
            "fireworks>=1.9.5", "numpy>=1.13", "click", "spglib", "ase",
            "pandas", "mongoengine==0.20.0", "mongomock==3.20.0"
        ]

[project.optional-dependencies]
doc = [
    "sphinx", "sphinx-rtd-theme"
]
test = ["pytest"]

[project.scripts]
ggulp = "disp.cli.cmd_ggulp:main"
disp = "disp.cli.cmd_disp:main"
trlaunch = "disp.cli.trlaunch:trlaunch"

[project.urls]
Home = "https://github.com/zhubonan/disp"

